# mangosbot-zero

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/Object/: ObjectMgr.cpp  ObjectMgr.h  PetAI.cpp  Player.cpp  SpellMgr.cpp  TotemAI.cpp  Unit.cpp
src/game/Server/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  WorldSession.cpp
src/game/WorldHandlers/: AuctionHouseHandler.cpp  CharacterHandler.cpp  Chat.cpp  Chat.h  GameEventMgr.cpp  GossipDef.h  ScriptMgr.cpp  Spell.cpp  SpellAuras.cpp  SpellEffects.cpp  World.cpp  World.h
src/modules/: CMakeLists.txt
src/modules/Bots/: CMakeLists.txt
src/modules/Bots/ahbot/: AhBot.cpp  AhBot.h  AhBotConfig.cpp  AhBotConfig.h  Category.cpp  Category.h  ItemBag.cpp  PricingStrategy.cpp  PricingStrategy.h  TradeCategory.h  ahbot.conf.dist.in
src/modules/Bots/playerbot/: AiFactory.cpp  ChatHelper.cpp  ChatHelper.h  FleeManager.cpp  GuildTaskMgr.cpp  GuildTaskMgr.h  LootObjectStack.cpp  PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotCommandServer.cpp  PlayerbotCommandServer.h  PlayerbotDbStore.cpp  PlayerbotFactory.cpp  PlayerbotFactory.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  RandomItemMgr.cpp  RandomItemMgr.h  RandomPlayerbotFactory.cpp  (+3 more)
src/modules/Immersive/: ImmersiveConfig.cpp  immersive.conf.dist.in  immersive.cpp  immersive.h
src/realmd/: realmd.rc
src/realmd/Auth/: AuthSocket.cpp
src/shared/: SystemConfig.h.in
src/test/: AcceptAllQuestStrategyTestCase.cpp  AiObjectContextWrapper.h  ArcaneMageTestCase.cpp  BearTankDruidTestCase.cpp  CMakeLists.txt  CasterDruidTestCase.cpp  CasterShamanTestCase.cpp  CatDpsDruidTestCase.cpp  ChatCommandTestCase.cpp  ChatFilterTestCase.cpp  ChatHelperTestCase.cpp  DpsHunterEngineTestCase.cpp  DpsPaladinTestCase.cpp  DpsPriestTestCase.cpp  DpsRogueTestCase.cpp  DpsWarlockTestCase.cpp  DpsWarriorTestCase.cpp  DruidNonCombatTestCase.cpp  DuelTestCase.cpp  EngineTestBase.cpp  EngineTestBase.h  ExternalEventHelperTestCase.cpp  FireMageTestCase.cpp  FrostMageTestCase.cpp  GenericTestCase.cpp  HealDruidTestCase.cpp  HealPaladinTestCase.cpp  HealPriestTestCase.cpp  HealShamanTestCase.cpp  HolyPriestTestCase.cpp  HunterNonCombatTestCase.cpp  KiteTestCase.cpp  LootObjectStackTestCase.cpp  MageNonCombatTestCase.cpp  MeleeShamanTestCase.cpp  MockedTargets.h  NonCombatEngineTestCase.cpp  NonCombatEngineTestCase2.cpp  PaladinNonCombatTestCase.cpp  PerformanceTestCase.cpp  (+16 more)
src/test/efficiency/: DruidEfficiencyTestCase.cpp  EfficiencyActionExecutionListener.h  MageEfficiencyTestCase.cpp  PriestEfficiencyTestCase.cpp  ShamanEfficiencyTestCase.cpp  WarlockEfficiencyTestCase.cpp
updates/world/: 2017_03_12_coldbringer_text.sql
(+177 files in other folders)
